--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Jack's Test Website</title>
 </head>
 <body>
+    <div class="gridContainer"
     <header>
     <h1 class="centre-align">Jack's Test Website</h1>
     <h2 class="centre-align">Please enjoy your stay!</h2>
@@ -15,7 +16,7 @@
 <main>
     <p class="centre-align">This is my first website. I'll be using this page to learn about coding HTML and CSS.</p>
         <div class="circular-image-container">
-    <img src="/Images/avatar.jpg" alt="This is my wonderful avatar" with="100" height="200" class="circular-image">    
+    <img src="/Images/avatar.jpg" alt="This is my wonderful avatar" width="140" width="140" class="circular-image">    
         </div>
     </main>
 <ul class="list-class"> 
@@ -32,9 +33,10 @@
     <li><a href="https://wikizilla.org/w/images/1/16/Gamera_-_5_-_vs_Guiron_-_6_-_Guiron_Appears.png" class="link-class" target="_blank">Guiron</a></li>
     <li><a href="https://upload.wikimedia.org/wikipedia/commons/8/82/Mosura_trailer_-_Mothra_flying.png" class="link-class" target="_blank">Mothra</a></li>
 </ol>
+</div>
 <footer class="example-div">
-    <p>This should now be a footer</p>
-    <img src="/Images/godzilla.gif" alt="Look at Godzilla dance" with="100" height="200" class="border-image">    
+    <h2>Godzilla Dance</h2>
+    <img src="/Images/godzilla.gif" alt="Look at Godzilla dance" width="480" height="122" class="border-image">    
 </footer>
 
 </body>
