added two new pages

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 </header>
 
 <main>
+    <a href="/about-me.html">About Me</a>
+    <a href="/movie-picker.html">Film Picker</a>
+
     <p class="centre-align">This is my first website. I'll be using this page to learn about coding HTML and CSS.</p>
         <div class="circular-image-container">
     <img src="/Images/avatar.jpg" alt="This is my wonderful avatar" width="140" width="140" class="circular-image">    
