Added JS function

--- a/about-me.html
+++ b/about-me.html
@@ -8,9 +8,15 @@
 </head>
 <body>
 
+    <a href="/index.html" class="top-link-class">Home</a>
+    <a href="/about-me.html" class="top-link-class">About Me</a>
+    <a href="/movie-picker.html" class="top-link-class">Movie Picker</a>
+
 <h1>About Me!</h1>
 <p>My name is Jack.</p>
 <p>I watch a lot of movies and enjoy coding.</p>
+<p>I host several movie related podcasts.</p>
+
     
 </body>
 </html>
