--- a/movie-picker.html
+++ b/movie-picker.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <a href="/index.html" class="top-link-class">Home</a>
+    <a href="/about-me.html" class="top-link-class">About Me</a>
+    <a href="/movie-picker.html" class="top-link-class">Movie Picker</a>
+
     <div class="container">
         <h1>Jack's Favourite Movies</h1>
         <label for="genre">Select Genre:</label>
