--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
     <title>Jack's Test Website</title>
 </head>
 <body>
-    <div class="gridContainer"
+    <a href="/index.html" class="top-link-class">Home</a>
+    <a href="/about-me.html" class="top-link-class">About Me</a>
+    <a href="/movie-picker.html" class="top-link-class">Movie Picker</a>
+    
+ 
 <header>
     <h1 class="centre-align">Jack's Test Website</h1>
     <h2 class="centre-align">Please enjoy your stay!</h2>
 </header>
 
 <main>
-    <a href="/about-me.html">About Me</a>
-    <a href="/movie-picker.html">Film Picker</a>
+    
 
     <p class="centre-align">This is my first website. I'll be using this page to learn about coding HTML and CSS.</p>
         <div class="circular-image-container">
